/***********************************************************************
X3 ChangeLog

2008-04-22  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Fixed a small bug with SVSNickChange.

	* src/hash.h: Added buttaknife's patch which allows modes to be
	searched for using opserv trace. Also Fixed a small bug with
	SVSNickChange.

	* src/hash.c: Fixed a small bug with SVSNickChange.

	* src/opserv.c: Added buttaknife's patch which allows modes to 
	be searched for using opserv trace.

	* src/proto-p10.c:  Added buttaknife's patch which allows modes
	to be searched for using opserv trace.

2008-04-10  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: Fix wrong param count check in oset password

2008-04-07  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Fixed a bug with x3 not handling kills properly.

	* src/opserv.c: Fixed a bug with x3 not handling kills properly.

2008-04-02  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: Provisional code for LOC account hostmask validation

	* src/nickserv.c: Provisional code for LOC account hostmask validation

2008-04-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* configure: Regenerated.

	* configure.in: Bumped up trunk version for X3.

2008-03-29  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Ignore SNO messages.

2008-03-28  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* configure: Regenerated.

	* configure.in: Fixed up a typo spotted by Sakkath.

	* x3.conf.example: Fixed up a typo spotted by Sakkath.

2008-03-28  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: If Nefarious 1.2.0 is in use then use SVSQUIT to
	fake a connection reset by peer quit if spin 1 comes up.

2008-03-28  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Only allow logged in people to use spin.

2008-03-28  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Added lamepart function so that spin can be used
	on Nefarious 1.1.
